sample-boot2/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-boot2
spec:
  type: NodePort
  selector:
    app: sample-boot2
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 30102
